setting lombok, and instance method